# test_library_api

./: .env  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  pytest.ini
app/alembic/: env.py
app/alembic/versions/: 4439be764c6b_add_models.py  48fe29d2833b_add_many_to_many_table_borrowed_books.py  dfa291ad790a_add_many_to_many_table_borrowed_books.py  fff295cb7479_add_readers.py
app/api/: __init__.py  deps.py
app/api/endpoints/: books.py  library.py  readers.py  users.py
app/api/schemas/: books.py  readers.py  users.py
app/core/: config.py  security.py
app/db/: database.py  models.py
app/repo/: base.py  books.py  library.py  readers.py  users.py
tests/: conftest.py  mock_books.json  mock_borrows.json  mock_readers.json  mock_users.json  test_api.py
